Sync production state: mobile navbar, contact form, admin features, MySQL backup
- Add responsive mobile navbar with hamburger menu
- Add contact form in footer with email functionality
- Add admin time-off management and schedule view
- Add booking cancellation with reasons
- Configure MySQL persistence with docker-compose
- Add automated MySQL backup script and cron job
- Update nginx config with security headers and rate limiting
- Update email configuration for contact form
- Add migrations: 0003_timeoff, 0003_add_cancel_reason

--- a/frontend/src/i18n/locales/de/common.json
+++ b/frontend/src/i18n/locales/de/common.json
@@ -14,7 +14,17 @@
   },
   "footer": {
     "address": "Deutschland, Erlangen, Hauptstraße 12 — Meister Barbershop",
-    "open": "Geöffnet Mo–Sa"
+    "open": "Geöffnet Mo–Sa",
+    "contact": {
+      "title": "Kontakt",
+      "name": "Name",
+      "phone": "Telefon",
+      "message": "Nachricht",
+      "submit": "Nachricht senden",
+      "sending": "Wird gesendet...",
+      "success": "Danke, wir melden uns bei Ihnen.",
+      "error": "Etwas ist schief gelaufen, bitte versuchen Sie es erneut."
+    }
   },
   "home": {
     "badge": "Meister • Bronze Line",
