feat(frontend): enhance MapSection (glow, hover hint, a11y, hasMap JSON-LD, i18n)

--- a/frontend/src/i18n/locales/de/common.json
+++ b/frontend/src/i18n/locales/de/common.json
@@ -70,7 +70,9 @@
     },
     "map": {
       "title": "Hauptstraße 12, 91054 Erlangen, Deutschland",
-      "cta": "Route planen"
+      "cta": "Route planen",
+      "openInMaps": "In Google Maps öffnen",
+      "hint": "In Google Maps öffnen"
     }
   },
   "booking": {
